--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.26.2",
     "zustand": "^5.0.0-rc.2"
   },
